fixing spacing in table

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -159,5 +159,5 @@ body {
 }
 
 .event-table tbody tr td:first-child, .event-table thead tr th:first-child {
-  width: 185px;
+  width: 220px;
 }
